starlark-rust/starlark/src/typing/golden/new_syntax_without_dot_type.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(x: str): pass

# good
foo("test")

# bad
foo(1)

Error:
error: Expected type `str.type` but got `int.type`
 --> filename:8:5
  |
8 | foo(1)
  |     ^
  |
